--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "babel-preset-react-native": "^5.0.2",
+    "babel-preset-react-native": "2.1.0",
     "react": "17.0.2",
     "react-icons": "^4.3.1",
     "react-native": "0.67.2"
